# feedback-management

./: .gitignore  README.md  docker-compose.yml  main.py  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  entrypoint.sh
backend/backend/: settings.py  urls.py
backend/backend/settings/: __init__.py  base.py
backend/feedback_app/: admin.py  models.py  permissions.py  serializers.py  serializers_new.py  serializers_old.py  tests.py  urls.py  views.py
backend/feedback_app/migrations/: 0001_initial.py  0002_feedback_priority_alter_feedback_status.py  0003_feedback_description.py  0004_alter_board_options_alter_comment_options_and_more.py  0005_alter_board_options_alter_comment_options_and_more.py
docs/: API_DOCUMENTATION.md  DEVELOPMENT_SETUP.md
docs/planning-stage/: project-details.md
docs/planning-stage/specs/: 01-crud-boards-feedback-comments.md  02-data-views-table-kanban.md  03-dashboard-analytics.md  04-integrations.md  05-workflow-enhancements.md  06-ux-improvements.md  07-business-features.md  README.md
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  router.jsx
frontend/src/components/: FeedbackDashboard.jsx  FeedbackKanban.jsx  FeedbackTable.jsx  LightDarkToggle.jsx  MainLayout.jsx  Navbar.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: BoardManagement.jsx  CreateBoard.jsx  CreateFeedback.jsx  Dashboard.jsx  FeedbackDetailPage.jsx  FeedbackDetails.jsx  FeedbackList.jsx  FeedbackListPage.jsx  Login.jsx  Register.jsx
