[project]
name = "feedback-management"
version = "0.1.0"
description = "A feedback management system."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "dj-database-url>=3.0.1",
    "django>=5.2.4",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "django-vite>=3.1.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.1",
    "nox>=2025.5.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.4",
]
[tool.black]
line-length = 88
target-version = ['py311']
exclude = '''
(
    ^/.nox/
    | ^/__pycache__/
    | ^/.ruff_cache/
    | ^/backend/staticfiles/
    | ^/backend/db.sqlite3
    | ^/frontend/dist/
    | ^/frontend/node_modules/
    | ^/backend/feedback_app/serializers_new.py
    | ^/backend/feedback_app/serializers_old.py
)
'''

[tool.ruff]
line-length = 88
exclude = [
    ".nox",
    "__pycache__",
    ".ruff_cache",
    "backend/staticfiles",
    "backend/db.sqlite3",
    "frontend/dist",
    "frontend/node_modules",
    "backend/feedback_app/serializers_new.py",
    "backend/feedback_app/serializers_old.py",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "F403"]